// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'Rust' CLI > [glob] basic case: defineMessages -> stdout 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID"
  },
  "OvR0NS": {
    "defaultMessage": "I have {count, plural, one{a dog} other{many dogs}}"
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens"
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe"
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message"
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message"
  },
  "ignore": {
    "defaultMessage": "ignore"
  },
  "inline-msg": {
    "defaultMessage": "inline message",
    "description": "inline description"
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace"
  }
}",
}
`;

exports[`'Rust' CLI > GH #4471: Optional chaining with generics in formatMessage 1`] = `
{
  "stderr": "",
  "stdout": "",
}
`;

exports[`'Rust' CLI > GH #4471: Optional chaining with generics in formatMessage 2`] = `
{
  "Og+dnM": {
    "defaultMessage": "Nested optional chaining",
    "description": "formatMessage with nested optional chaining",
  },
  "Wqiya3": {
    "defaultMessage": "With both generics and optional chaining",
    "description": "formatMessage with both generic type parameter and optional chaining",
  },
  "qn6UQr": {
    "defaultMessage": "Normal call",
  },
  "tUGyKn": {
    "defaultMessage": "With optional chaining",
    "description": "formatMessage with optional chaining operator",
  },
  "v3S28r": {
    "defaultMessage": "With generics",
    "description": "formatMessage with generic type parameter",
  },
}
`;

exports[`'Rust' CLI > GH #5069: Tagged template expressions with substitutions in non-message props 1`] = `
{
  "stderr": "",
  "stdout": "",
}
`;

exports[`'Rust' CLI > GH #5069: Tagged template expressions with substitutions in non-message props 2`] = `
{
  "message.with.css.tagname": {
    "defaultMessage": "This message uses emotion css",
  },
  "message.with.dedent": {
    "defaultMessage": "Message with dedent",
    "description": "Description with dedent",
  },
  "message.with.styled.in.values": {
    "defaultMessage": "Hello {component}",
  },
  "message.with.styled.tagname": {
    "defaultMessage": "This message uses styled-components as tagName",
  },
}
`;

exports[`'Rust' CLI > GH #5994: throws:false allows partial extraction with dynamic IDs 1`] = `
{
  "T6TYZ7": {
    "defaultMessage": "This also has a dynamic ID",
  },
  "h7VC+o": {
    "defaultMessage": "This has a dynamic ID and should fail with strict checks",
  },
  "valid-message-1": {
    "defaultMessage": "This is a valid message",
  },
  "valid-message-2": {
    "defaultMessage": "Another valid message",
  },
  "valid-message-3": {
    "defaultMessage": "Third valid message",
  },
  "valid-message-4": {
    "defaultMessage": "Fourth valid message from formatMessage",
  },
}
`;

exports[`'Rust' CLI > GH #5994: throws:false with multiple files collects all valid messages 1`] = `
{
  "T6TYZ7": {
    "defaultMessage": "This also has a dynamic ID",
  },
  "all-valid-1": {
    "defaultMessage": "First valid message",
  },
  "all-valid-2": {
    "defaultMessage": "Second valid message",
  },
  "h7VC+o": {
    "defaultMessage": "This has a dynamic ID and should fail with strict checks",
  },
  "valid-message-1": {
    "defaultMessage": "This is a valid message",
  },
  "valid-message-2": {
    "defaultMessage": "Another valid message",
  },
  "valid-message-3": {
    "defaultMessage": "Third valid message",
  },
  "valid-message-4": {
    "defaultMessage": "Fourth valid message from formatMessage",
  },
}
`;

exports[`'Rust' CLI > TypeScript 4.7 syntax 1`] = `
{
  "stderr": "",
  "stdout": "",
}
`;

exports[`'Rust' CLI > TypeScript 4.7 syntax 2`] = `{}`;

exports[`'Rust' CLI > basic case: defineMessages -> out-file 1`] = `
{
  "stderr": "",
  "stdout": "",
}
`;

exports[`'Rust' CLI > basic case: defineMessages -> out-file 2`] = `
{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID",
  },
  "OvR0NS": {
    "defaultMessage": "I have {count, plural, one{a dog} other{many dogs}}",
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message",
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
  },
  "inline-msg": {
    "defaultMessage": "inline message",
    "description": "inline description",
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace",
  },
}
`;

exports[`'Rust' CLI > basic case: defineMessages -> out-file with  --additional-function-names 1`] = `
{
  "stderr": "",
  "stdout": "",
}
`;

exports[`'Rust' CLI > basic case: defineMessages -> out-file with  --additional-function-names 2`] = `
{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID",
  },
  "OvR0NS": {
    "defaultMessage": "I have {count, plural, one{a dog} other{many dogs}}",
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
  },
  "e+FgwJ": {
    "defaultMessage": "additional function names t",
    "description": "The default message",
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message",
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
  },
  "inline-msg": {
    "defaultMessage": "inline message",
    "description": "inline description",
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace",
  },
}
`;

exports[`'Rust' CLI > basic case: defineMessages -> out-file with location 1`] = `
{
  "stderr": "",
  "stdout": "",
}
`;

exports[`'Rust' CLI > basic case: defineMessages -> out-file with location 2`] = `
{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID",
    "file": "defineMessages/actual.jsx",
    "start": 113,
  },
  "OvR0NS": {
    "defaultMessage": "I have {count, plural, one{a dog} other{many dogs}}",
    "file": "defineMessages/actual.jsx",
    "start": 113,
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
    "file": "defineMessages/actual.jsx",
    "start": 113,
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
    "file": "defineMessages/actual.jsx",
    "start": 113,
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "file": "defineMessages/actual.jsx",
    "start": 113,
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
    "file": "defineMessages/actual.jsx",
    "start": 113,
  },
  "inline-msg": {
    "defaultMessage": "inline message",
    "description": "inline description",
    "end": 1635,
    "file": "defineMessages/actual.jsx",
    "start": 1488,
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace",
    "file": "defineMessages/actual.jsx",
    "start": 113,
  },
}
`;

exports[`'Rust' CLI > basic case: defineMessages -> stdout 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID"
  },
  "OvR0NS": {
    "defaultMessage": "I have {count, plural, one{a dog} other{many dogs}}"
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens"
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe"
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message"
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message"
  },
  "inline-msg": {
    "defaultMessage": "inline message",
    "description": "inline description"
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace"
  }
}",
}
`;

exports[`'Rust' CLI > basic case: help 1`] = `
{
  "stderr": "",
  "stdout": "Extract string messages from React components that use react-intl. Extracts messages from TypeScript, JavaScript, Vue, and Handlebars files

Usage: formatjs_cli extract [OPTIONS] [FILES]...

Arguments:
  [FILES]...
          File glob patterns to extract from (e.g., src/**/*.tsx)

Options:
      --format <FORMATTER>
          Formatter to use for output format. Available: default, simple, transifex, smartling, lokalise, crowdin

          Possible values:
          - default:   Default formatter: extracts defaultMessage from MessageDescriptor objects
          - simple:    Simple formatter: pass-through for Record<string, string>
          - transifex: Transifex formatter: extracts string field
          - smartling: Smartling formatter: extracts message field
          - lokalise:  Lokalise formatter: extracts translation field
          - crowdin:   Crowdin formatter: extracts message field

      --in-file <PATH>
          File containing list of files to extract from (one per line). Used when you have a large number of files and bash chokes

      --out-file <PATH>
          Target file path for aggregated .json output of all translations

      --id-interpolation-pattern <PATTERN>
          Pattern to automatically generate IDs for messages without explicit IDs. Uses webpack loader-utils interpolateName format
          
          [default: [sha512:contenthash:base64:6]]

      --extract-source-location
          Whether to extract metadata about message location in source file

      --additional-component-names <NAMES>
          Additional component names to extract from (comma-separated, e.g., FormattedFooBarMessage)

      --additional-function-names <NAMES>
          Additional function names to extract messages from (comma-separated, e.g., $t,formatMessage)

      --ignore <PATTERNS>
          List of glob patterns to exclude from extraction

      --throws
          Whether to throw an exception when failing to process any file in the batch

      --pragma <PRAGMA>
          Parse custom pragma for file metadata (e.g., @intl-meta)

      --preserve-whitespace
          Whether to preserve whitespace and newlines

      --flatten
          Whether to hoist selectors and flatten sentences

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
",
}
`;

exports[`'Rust' CLI > basic case: inFile 1`] = `{}`;

exports[`'Rust' CLI > duplicated descriptor ids shows warning 1`] = `
{
  "foo": {
    "defaultMessage": "Bar",
  },
}
`;

exports[`'Rust' CLI > flatten defineMessages -> stdout 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID"
  },
  "app.home.kittens": {
    "defaultMessage": "{count,plural,one{# kitten} other{# kittens} =0{😭}}",
    "description": "Counts kittens"
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}''",
    "description": "Escaped apostrophe"
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message"
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message"
  },
  "inline-msg": {
    "defaultMessage": "inline message",
    "description": "inline description"
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace"
  },
  "vG2DC3": {
    "defaultMessage": "{count,plural,one{I have a dog} other{I have many dogs}}"
  }
}",
}
`;

exports[`'Rust' CLI > ignore -> stdout JS 1`] = `
{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID",
  },
  "OvR0NS": {
    "defaultMessage": "I have {count, plural, one{a dog} other{many dogs}}",
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message",
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
  },
  "inline-msg": {
    "defaultMessage": "inline message",
    "description": "inline description",
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace",
  },
}
`;

exports[`'Rust' CLI > ignore -> stdout TS 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID"
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens"
  },
  "eCy8Eo": {
    "defaultMessage": "No Desc"
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe"
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message"
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message"
  },
  "inline": {
    "defaultMessage": "formatted message",
    "description": "foo"
  },
  "inline.linebreak": {
    "defaultMessage": "formatted message\\n\\t\\t\\t\\t\\t\\twith linebreak",
    "description": "foo\\n\\t\\t\\t\\t\\t\\tbar"
  },
  "linebreak": {
    "defaultMessage": "this is\\na message",
    "description": "this is\\na\\ndescription"
  },
  "newline": {
    "defaultMessage": "this is     a message",
    "description": "this is     a     description"
  },
  "templateLinebreak": {
    "defaultMessage": "this is\\n    a message",
    "description": "this is\\n    a\\n    description"
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace"
  }
}",
}
`;

exports[`'Rust' CLI > import meta 1`] = `
{
  "stderr": "",
  "stdout": "",
}
`;

exports[`'Rust' CLI > import meta 2`] = `{}`;

exports[`'Rust' CLI > non duplicated descriptors does not throw 1`] = `
{
  "stderr": "",
  "stdout": "",
}
`;

exports[`'Rust' CLI > non duplicated descriptors does not throw 2`] = `
{
  "foo": {
    "defaultMessage": "Foo",
    "description": {
      "maxCharacterCount": 2,
      "text": "Bar",
    },
  },
}
`;

exports[`'Rust' CLI > pragma 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID"
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens"
  },
  "eCy8Eo": {
    "defaultMessage": "No Desc"
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe"
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message"
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message"
  },
  "inline": {
    "defaultMessage": "formatted message",
    "description": "foo"
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace"
  }
}",
}
`;

exports[`'Rust' CLI > typescript -> stdout 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID"
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens"
  },
  "eCy8Eo": {
    "defaultMessage": "No Desc"
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe"
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message"
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message"
  },
  "inline": {
    "defaultMessage": "formatted message",
    "description": "foo"
  },
  "inline.linebreak": {
    "defaultMessage": "formatted message\\n\\t\\t\\t\\t\\t\\twith linebreak",
    "description": "foo\\n\\t\\t\\t\\t\\t\\tbar"
  },
  "linebreak": {
    "defaultMessage": "this is\\na message",
    "description": "this is\\na\\ndescription"
  },
  "newline": {
    "defaultMessage": "this is     a message",
    "description": "this is     a     description"
  },
  "templateLinebreak": {
    "defaultMessage": "this is\\n    a message",
    "description": "this is\\n    a\\n    description"
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace"
  }
}",
}
`;

exports[`'Rust' CLI > typescript -> stdout with --additional-function-names 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID"
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens"
  },
  "e+FgwJ": {
    "defaultMessage": "additional function names t",
    "description": "The default message"
  },
  "eCy8Eo": {
    "defaultMessage": "No Desc"
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe"
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message"
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message"
  },
  "inline": {
    "defaultMessage": "formatted message",
    "description": "foo"
  },
  "inline.linebreak": {
    "defaultMessage": "formatted message\\n\\t\\t\\t\\t\\t\\twith linebreak",
    "description": "foo\\n\\t\\t\\t\\t\\t\\tbar"
  },
  "linebreak": {
    "defaultMessage": "this is\\na message",
    "description": "this is\\na\\ndescription"
  },
  "newline": {
    "defaultMessage": "this is     a message",
    "description": "this is     a     description"
  },
  "templateLinebreak": {
    "defaultMessage": "this is\\n    a message",
    "description": "this is\\n    a\\n    description"
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace"
  }
}",
}
`;

exports[`'Rust' CLI > typescript -> stdout with crowdin 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "message": "No ID",
    "description": "no ID"
  },
  "app.home.kittens": {
    "message": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens"
  },
  "eCy8Eo": {
    "message": "No Desc"
  },
  "escaped.apostrophe": {
    "message": "A quoted value ''{value}'",
    "description": "Escaped apostrophe"
  },
  "foo.bar.baz": {
    "message": "Hello World!",
    "description": "The default message"
  },
  "foo.bar.biff": {
    "message": "Hello Nurse!",
    "description": "Another message"
  },
  "inline": {
    "message": "formatted message",
    "description": "foo"
  },
  "inline.linebreak": {
    "message": "formatted message\\n\\t\\t\\t\\t\\t\\twith linebreak",
    "description": "foo\\n\\t\\t\\t\\t\\t\\tbar"
  },
  "linebreak": {
    "message": "this is\\na message",
    "description": "this is\\na\\ndescription"
  },
  "newline": {
    "message": "this is     a message",
    "description": "this is     a     description"
  },
  "templateLinebreak": {
    "message": "this is\\n    a message",
    "description": "this is\\n    a\\n    description"
  },
  "trailing.ws": {
    "message": "Some whitespace",
    "description": "Whitespace"
  }
}",
}
`;

exports[`'Rust' CLI > typescript -> stdout with lokalise 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "translation": "No ID",
    "notes": "no ID"
  },
  "app.home.kittens": {
    "translation": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "notes": "Counts kittens"
  },
  "eCy8Eo": {
    "translation": "No Desc"
  },
  "escaped.apostrophe": {
    "translation": "A quoted value ''{value}'",
    "notes": "Escaped apostrophe"
  },
  "foo.bar.baz": {
    "translation": "Hello World!",
    "notes": "The default message"
  },
  "foo.bar.biff": {
    "translation": "Hello Nurse!",
    "notes": "Another message"
  },
  "inline": {
    "translation": "formatted message",
    "notes": "foo"
  },
  "inline.linebreak": {
    "translation": "formatted message\\n\\t\\t\\t\\t\\t\\twith linebreak",
    "notes": "foo\\n\\t\\t\\t\\t\\t\\tbar"
  },
  "linebreak": {
    "translation": "this is\\na message",
    "notes": "this is\\na\\ndescription"
  },
  "newline": {
    "translation": "this is     a message",
    "notes": "this is     a     description"
  },
  "templateLinebreak": {
    "translation": "this is\\n    a message",
    "notes": "this is\\n    a\\n    description"
  },
  "trailing.ws": {
    "translation": "Some whitespace",
    "notes": "Whitespace"
  }
}",
}
`;

exports[`'Rust' CLI > typescript -> stdout with simple 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": "No ID",
  "app.home.kittens": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
  "eCy8Eo": "No Desc",
  "escaped.apostrophe": "A quoted value ''{value}'",
  "foo.bar.baz": "Hello World!",
  "foo.bar.biff": "Hello Nurse!",
  "inline": "formatted message",
  "inline.linebreak": "formatted message\\n\\t\\t\\t\\t\\t\\twith linebreak",
  "linebreak": "this is\\na message",
  "newline": "this is     a message",
  "templateLinebreak": "this is\\n    a message",
  "trailing.ws": "Some whitespace"
}",
}
`;

exports[`'Rust' CLI > typescript -> stdout with smartling 1`] = `
{
  "stderr": "",
  "stdout": "{
  "smartling": {
    "translate_paths": [
      {
        "path": "*/message",
        "key": "{*}/message",
        "instruction": "*/description"
      }
    ],
    "variants_enabled": true,
    "string_format": "icu"
  },
  "286VP8": {
    "message": "No ID",
    "description": "no ID"
  },
  "app.home.kittens": {
    "message": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens"
  },
  "eCy8Eo": {
    "message": "No Desc"
  },
  "escaped.apostrophe": {
    "message": "A quoted value ''{value}'",
    "description": "Escaped apostrophe"
  },
  "foo.bar.baz": {
    "message": "Hello World!",
    "description": "The default message"
  },
  "foo.bar.biff": {
    "message": "Hello Nurse!",
    "description": "Another message"
  },
  "inline": {
    "message": "formatted message",
    "description": "foo"
  },
  "inline.linebreak": {
    "message": "formatted message\\n\\t\\t\\t\\t\\t\\twith linebreak",
    "description": "foo\\n\\t\\t\\t\\t\\t\\tbar"
  },
  "linebreak": {
    "message": "this is\\na message",
    "description": "this is\\na\\ndescription"
  },
  "newline": {
    "message": "this is     a message",
    "description": "this is     a     description"
  },
  "templateLinebreak": {
    "message": "this is\\n    a message",
    "description": "this is\\n    a\\n    description"
  },
  "trailing.ws": {
    "message": "Some whitespace",
    "description": "Whitespace"
  }
}",
}
`;

exports[`'Rust' CLI > typescript -> stdout with transifex 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "string": "No ID",
    "developer_comment": "no ID"
  },
  "app.home.kittens": {
    "string": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "developer_comment": "Counts kittens"
  },
  "eCy8Eo": {
    "string": "No Desc"
  },
  "escaped.apostrophe": {
    "string": "A quoted value ''{value}'",
    "developer_comment": "Escaped apostrophe"
  },
  "foo.bar.baz": {
    "string": "Hello World!",
    "developer_comment": "The default message"
  },
  "foo.bar.biff": {
    "string": "Hello Nurse!",
    "developer_comment": "Another message"
  },
  "inline": {
    "string": "formatted message",
    "developer_comment": "foo"
  },
  "inline.linebreak": {
    "string": "formatted message\\n\\t\\t\\t\\t\\t\\twith linebreak",
    "developer_comment": "foo\\n\\t\\t\\t\\t\\t\\tbar"
  },
  "linebreak": {
    "string": "this is\\na message",
    "developer_comment": "this is\\na\\ndescription"
  },
  "newline": {
    "string": "this is     a message",
    "developer_comment": "this is     a     description"
  },
  "templateLinebreak": {
    "string": "this is\\n    a message",
    "developer_comment": "this is\\n    a\\n    description"
  },
  "trailing.ws": {
    "string": "Some whitespace",
    "developer_comment": "Whitespace"
  }
}",
}
`;

exports[`'Rust' CLI > whitespace and newlines should be preserved 1`] = `
{
  "stderr": "",
  "stdout": "",
}
`;

exports[`'Rust' CLI > whitespace and newlines should be preserved 2`] = `
{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID",
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
  },
  "eCy8Eo": {
    "defaultMessage": "No Desc",
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message",
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
  },
  "inline": {
    "defaultMessage": "formatted message",
    "description": "foo",
  },
  "inline.linebreak": {
    "defaultMessage": "formatted message
						with linebreak",
    "description": "foo
						bar",
  },
  "linebreak": {
    "defaultMessage": "this is
a message",
    "description": "this is
a
description",
  },
  "newline": {
    "defaultMessage": "this is     a message",
    "description": "this is     a     description",
  },
  "templateLinebreak": {
    "defaultMessage": "this is
    a message",
    "description": "this is
    a
    description",
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace",
  },
}
`;

exports[`'TypeScript' CLI > [glob] basic case: defineMessages -> stdout 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID"
  },
  "OvR0NS": {
    "defaultMessage": "I have {count, plural, one{a dog} other{many dogs}}"
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens"
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe"
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message"
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message"
  },
  "ignore": {
    "defaultMessage": "ignore"
  },
  "inline-msg": {
    "defaultMessage": "inline message",
    "description": "inline description"
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace"
  }
}
",
}
`;

exports[`'TypeScript' CLI > GH #4471: Optional chaining with generics in formatMessage 1`] = `
{
  "stderr": "",
  "stdout": "",
}
`;

exports[`'TypeScript' CLI > GH #4471: Optional chaining with generics in formatMessage 2`] = `
{
  "Og+dnM": {
    "defaultMessage": "Nested optional chaining",
    "description": "formatMessage with nested optional chaining",
  },
  "Wqiya3": {
    "defaultMessage": "With both generics and optional chaining",
    "description": "formatMessage with both generic type parameter and optional chaining",
  },
  "qn6UQr": {
    "defaultMessage": "Normal call",
  },
  "tUGyKn": {
    "defaultMessage": "With optional chaining",
    "description": "formatMessage with optional chaining operator",
  },
  "v3S28r": {
    "defaultMessage": "With generics",
    "description": "formatMessage with generic type parameter",
  },
}
`;

exports[`'TypeScript' CLI > GH #5069: Tagged template expressions with substitutions in non-message props 1`] = `
{
  "stderr": "",
  "stdout": "",
}
`;

exports[`'TypeScript' CLI > GH #5069: Tagged template expressions with substitutions in non-message props 2`] = `
{
  "message.with.css.tagname": {
    "defaultMessage": "This message uses emotion css",
  },
  "message.with.dedent": {
    "defaultMessage": "Message with dedent",
    "description": "Description with dedent",
  },
  "message.with.styled.in.values": {
    "defaultMessage": "Hello {component}",
  },
  "message.with.styled.tagname": {
    "defaultMessage": "This message uses styled-components as tagName",
  },
}
`;

exports[`'TypeScript' CLI > GH #5994: throws:false allows partial extraction with dynamic IDs 1`] = `
{
  "valid-message-1": {
    "defaultMessage": "This is a valid message",
  },
  "valid-message-2": {
    "defaultMessage": "Another valid message",
  },
  "valid-message-3": {
    "defaultMessage": "Third valid message",
  },
  "valid-message-4": {
    "defaultMessage": "Fourth valid message from formatMessage",
  },
}
`;

exports[`'TypeScript' CLI > GH #5994: throws:false with multiple files collects all valid messages 1`] = `
{
  "all-valid-1": {
    "defaultMessage": "First valid message",
  },
  "all-valid-2": {
    "defaultMessage": "Second valid message",
  },
  "valid-message-1": {
    "defaultMessage": "This is a valid message",
  },
  "valid-message-2": {
    "defaultMessage": "Another valid message",
  },
  "valid-message-3": {
    "defaultMessage": "Third valid message",
  },
  "valid-message-4": {
    "defaultMessage": "Fourth valid message from formatMessage",
  },
}
`;

exports[`'TypeScript' CLI > TypeScript 4.7 syntax 1`] = `
{
  "stderr": "",
  "stdout": "",
}
`;

exports[`'TypeScript' CLI > TypeScript 4.7 syntax 2`] = `{}`;

exports[`'TypeScript' CLI > basic case: defineMessages -> out-file 1`] = `
{
  "stderr": "",
  "stdout": "",
}
`;

exports[`'TypeScript' CLI > basic case: defineMessages -> out-file 2`] = `
{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID",
  },
  "OvR0NS": {
    "defaultMessage": "I have {count, plural, one{a dog} other{many dogs}}",
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message",
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
  },
  "inline-msg": {
    "defaultMessage": "inline message",
    "description": "inline description",
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace",
  },
}
`;

exports[`'TypeScript' CLI > basic case: defineMessages -> out-file with  --additional-function-names 1`] = `
{
  "stderr": "",
  "stdout": "",
}
`;

exports[`'TypeScript' CLI > basic case: defineMessages -> out-file with  --additional-function-names 2`] = `
{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID",
  },
  "OvR0NS": {
    "defaultMessage": "I have {count, plural, one{a dog} other{many dogs}}",
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
  },
  "e+FgwJ": {
    "defaultMessage": "additional function names t",
    "description": "The default message",
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message",
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
  },
  "inline-msg": {
    "defaultMessage": "inline message",
    "description": "inline description",
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace",
  },
}
`;

exports[`'TypeScript' CLI > basic case: defineMessages -> out-file with location 1`] = `
{
  "stderr": "",
  "stdout": "",
}
`;

exports[`'TypeScript' CLI > basic case: defineMessages -> out-file with location 2`] = `
{
  "286VP8": {
    "col": 18,
    "defaultMessage": "No ID",
    "description": "no ID",
    "end": 935,
    "file": "defineMessages/actual.jsx",
    "line": 34,
    "start": 874,
  },
  "OvR0NS": {
    "col": 10,
    "defaultMessage": "I have {count, plural, one{a dog} other{many dogs}}",
    "end": 1028,
    "file": "defineMessages/actual.jsx",
    "line": 38,
    "start": 947,
  },
  "app.home.kittens": {
    "col": 10,
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
    "end": 520,
    "file": "defineMessages/actual.jsx",
    "line": 15,
    "start": 370,
  },
  "escaped.apostrophe": {
    "col": 10,
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
    "end": 784,
    "file": "defineMessages/actual.jsx",
    "line": 25,
    "start": 660,
  },
  "foo.bar.baz": {
    "col": 9,
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "end": 244,
    "file": "defineMessages/actual.jsx",
    "line": 5,
    "start": 139,
  },
  "foo.bar.biff": {
    "col": 10,
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
    "end": 358,
    "file": "defineMessages/actual.jsx",
    "line": 10,
    "start": 256,
  },
  "inline-msg": {
    "col": 10,
    "defaultMessage": "inline message",
    "description": "inline description",
    "end": 1633,
    "file": "defineMessages/actual.jsx",
    "line": 60,
    "start": 1486,
  },
  "trailing.ws": {
    "col": 21,
    "defaultMessage": "Some whitespace",
    "description": "Whitespace",
    "end": 648,
    "file": "defineMessages/actual.jsx",
    "line": 20,
    "start": 543,
  },
}
`;

exports[`'TypeScript' CLI > basic case: defineMessages -> stdout 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID"
  },
  "OvR0NS": {
    "defaultMessage": "I have {count, plural, one{a dog} other{many dogs}}"
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens"
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe"
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message"
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message"
  },
  "inline-msg": {
    "defaultMessage": "inline message",
    "description": "inline description"
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace"
  }
}
",
}
`;

exports[`'TypeScript' CLI > basic case: help 1`] = `
{
  "stderr": "",
  "stdout": "Usage: formatjs extract [options] [files...]

Extract string messages from React components that use react-intl.
The input language is expected to be TypeScript or ES2017 with JSX.

Options:
  --format <path>                                       Path to a formatter file that controls the shape of JSON file from \`--out-file\`.
  The formatter file must export a function called \`format\` with the signature
  \`\`\`
  type FormatFn = <T = Record<string, MessageDescriptor>>(
    msgs: Record<string, MessageDescriptor>
  ) => T
  \`\`\` 
  This is especially useful to convert from our extracted format to a TMS-specific format.
  
  --in-file <path>                                      The file containing list of files to extract from, separated by newlines. This is mainly
        to deal with the case where you have a large number of files to extract from and bash chokes.
  --out-file <path>                                     The target file path where the plugin will output an aggregated 
  \`.json\` file of all the translations from the \`files\` supplied.
  --id-interpolation-pattern <pattern>                  If certain message descriptors don't have id, this \`pattern\` will be used to automatically
  generate IDs for them. Default to \`[sha512:contenthash:base64:6]\` where \`contenthash\` is the hash of
  \`defaultMessage\` and \`description\`.
  See https://github.com/webpack/loader-utils#interpolatename for sample patterns (default: "[sha512:contenthash:base64:6]")
  --extract-source-location                             Whether the metadata about the location of the message in the source file should be 
  extracted. If \`true\`, then \`file\`, \`start\`, and \`end\` fields will exist for each 
  extracted message descriptors. (default: false)
  --additional-component-names <comma-separated-names>  Additional component names to extract messages from, e.g: \`'FormattedFooBarMessage'\`. 
  **NOTE**: By default we check for the fact that \`FormattedMessage\` 
  is imported from \`moduleSourceName\` to make sure variable alias 
  works. This option does not do that so it's less safe.
  --additional-function-names <comma-separated-names>   Additional function names to extract messages from, e.g: \`'$t'\`.
  --ignore <files...>                                   List of glob paths to **not** extract translations from.
  --throws                                              Whether to throw an exception when we fail to process any file in the batch.
  --pragma <pragma>                                     parse specific additional custom pragma. This allows you to tag certain file with metadata such as \`project\`. For example with this file:
  
        \`\`\`
        // @intl-meta project:my-custom-project
        import {FormattedMessage} from 'react-intl';
  
        <FormattedMessage defaultMessage="foo" id="bar" />;
        \`\`\`
  
        and with option \`{pragma: "intl-meta"}\`, we'll parse out \`// @intl-meta project:my-custom-project\` into \`{project: 'my-custom-project'}\` in the result file.
  --preserve-whitespace                                 Whether to preserve whitespace and newlines.
  --flatten                                             Whether to hoist selectors & flatten sentences as much as possible. E.g:
  "I have {count, plural, one{a dog} other{many dogs}}"
  becomes "{count, plural, one{I have a dog} other{I have many dogs}}".
  The goal is to provide as many full sentences as possible since fragmented
  sentences are not translator-friendly.
  -h, --help                                            display help for command
",
}
`;


exports[`'TypeScript' CLI > basic case: inFile 1`] = `
{
  "bar": {
    "defaultMessage": "Bar",
  },
  "foo": {
    "defaultMessage": "Foo",
  },
}
`;

exports[`'TypeScript' CLI > duplicated descriptor ids shows warning 1`] = `
{
  "foo": {
    "defaultMessage": "Bar",
  },
}
`;

exports[`'TypeScript' CLI > flatten defineMessages -> stdout 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID"
  },
  "app.home.kittens": {
    "defaultMessage": "{count,plural,=0{😭} one{# kitten} other{# kittens}}",
    "description": "Counts kittens"
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}''",
    "description": "Escaped apostrophe"
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message"
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message"
  },
  "inline-msg": {
    "defaultMessage": "inline message",
    "description": "inline description"
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace"
  },
  "vG2DC3": {
    "defaultMessage": "{count,plural,one{I have a dog} other{I have many dogs}}"
  }
}
",
}
`;

exports[`'TypeScript' CLI > ignore -> stdout JS 1`] = `
{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID",
  },
  "OvR0NS": {
    "defaultMessage": "I have {count, plural, one{a dog} other{many dogs}}",
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message",
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
  },
  "ignore": {
    "defaultMessage": "ignore",
  },
  "inline-msg": {
    "defaultMessage": "inline message",
    "description": "inline description",
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace",
  },
}
`;

exports[`'TypeScript' CLI > ignore -> stdout TS 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID"
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens"
  },
  "eCy8Eo": {
    "defaultMessage": "No Desc"
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe"
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message"
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message"
  },
  "inline": {
    "defaultMessage": "formatted message",
    "description": "foo"
  },
  "inline.linebreak": {
    "defaultMessage": "formatted message with linebreak",
    "description": "foo\\n\\t\\t\\t\\t\\t\\tbar"
  },
  "linebreak": {
    "defaultMessage": "this is a message",
    "description": "this is\\na\\ndescription"
  },
  "newline": {
    "defaultMessage": "this is a message",
    "description": "this is     a     description"
  },
  "templateLinebreak": {
    "defaultMessage": "this is a message",
    "description": "this is\\n    a\\n    description"
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace"
  }
}
",
}
`;

exports[`'TypeScript' CLI > import meta 1`] = `
{
  "stderr": "",
  "stdout": "",
}
`;

exports[`'TypeScript' CLI > import meta 2`] = `
{
  "greeting": {
    "defaultMessage": "Hello, {name}!",
  },
}
`;

exports[`'TypeScript' CLI > non duplicated descriptors does not throw 1`] = `
{
  "stderr": "",
  "stdout": "",
}
`;

exports[`'TypeScript' CLI > non duplicated descriptors does not throw 2`] = `
{
  "foo": {
    "defaultMessage": "Foo",
    "description": {
      "maxCharacterCount": 2,
      "text": "Bar",
    },
  },
}
`;

exports[`'TypeScript' CLI > pragma 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID",
    "meta": {
      "baz": "1",
      "foo": "bar"
    }
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
    "meta": {
      "baz": "1",
      "foo": "bar"
    }
  },
  "eCy8Eo": {
    "defaultMessage": "No Desc",
    "meta": {
      "baz": "1",
      "foo": "bar"
    }
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
    "meta": {
      "baz": "1",
      "foo": "bar"
    }
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "meta": {
      "baz": "1",
      "foo": "bar"
    }
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
    "meta": {
      "baz": "1",
      "foo": "bar"
    }
  },
  "inline": {
    "defaultMessage": "formatted message",
    "description": "foo",
    "meta": {
      "baz": "1",
      "foo": "bar"
    }
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace",
    "meta": {
      "baz": "1",
      "foo": "bar"
    }
  }
}
",
}
`;

exports[`'TypeScript' CLI > typescript -> stdout 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID"
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens"
  },
  "eCy8Eo": {
    "defaultMessage": "No Desc"
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe"
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message"
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message"
  },
  "inline": {
    "defaultMessage": "formatted message",
    "description": "foo"
  },
  "inline.linebreak": {
    "defaultMessage": "formatted message with linebreak",
    "description": "foo\\n\\t\\t\\t\\t\\t\\tbar"
  },
  "linebreak": {
    "defaultMessage": "this is a message",
    "description": "this is\\na\\ndescription"
  },
  "newline": {
    "defaultMessage": "this is a message",
    "description": "this is     a     description"
  },
  "templateLinebreak": {
    "defaultMessage": "this is a message",
    "description": "this is\\n    a\\n    description"
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace"
  }
}
",
}
`;

exports[`'TypeScript' CLI > typescript -> stdout with --additional-function-names 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID"
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens"
  },
  "e+FgwJ": {
    "defaultMessage": "additional function names t",
    "description": "The default message"
  },
  "eCy8Eo": {
    "defaultMessage": "No Desc"
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe"
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message"
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message"
  },
  "inline": {
    "defaultMessage": "formatted message",
    "description": "foo"
  },
  "inline.linebreak": {
    "defaultMessage": "formatted message with linebreak",
    "description": "foo\\n\\t\\t\\t\\t\\t\\tbar"
  },
  "linebreak": {
    "defaultMessage": "this is a message",
    "description": "this is\\na\\ndescription"
  },
  "newline": {
    "defaultMessage": "this is a message",
    "description": "this is     a     description"
  },
  "templateLinebreak": {
    "defaultMessage": "this is a message",
    "description": "this is\\n    a\\n    description"
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace"
  }
}
",
}
`;

exports[`'TypeScript' CLI > typescript -> stdout with crowdin 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "description": "no ID",
    "message": "No ID"
  },
  "app.home.kittens": {
    "description": "Counts kittens",
    "message": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}"
  },
  "eCy8Eo": {
    "message": "No Desc"
  },
  "escaped.apostrophe": {
    "description": "Escaped apostrophe",
    "message": "A quoted value ''{value}'"
  },
  "foo.bar.baz": {
    "description": "The default message",
    "message": "Hello World!"
  },
  "foo.bar.biff": {
    "description": "Another message",
    "message": "Hello Nurse!"
  },
  "inline": {
    "description": "foo",
    "message": "formatted message"
  },
  "inline.linebreak": {
    "description": "foo\\n\\t\\t\\t\\t\\t\\tbar",
    "message": "formatted message with linebreak"
  },
  "linebreak": {
    "description": "this is\\na\\ndescription",
    "message": "this is a message"
  },
  "newline": {
    "description": "this is     a     description",
    "message": "this is a message"
  },
  "templateLinebreak": {
    "description": "this is\\n    a\\n    description",
    "message": "this is a message"
  },
  "trailing.ws": {
    "description": "Whitespace",
    "message": "Some whitespace"
  }
}
",
}
`;

exports[`'TypeScript' CLI > typescript -> stdout with formatter 1`] = `
{
  "stderr": "",
  "stdout": "foo.bar.baz=Hello World!
foo.bar.biff=Hello Nurse!
app.home.kittens={count, plural, =0 {😭} one {# kitten} other {# kittens}}
trailing.ws=Some whitespace
newline=this is a message
linebreak=this is a message
templateLinebreak=this is a message
escaped.apostrophe=A quoted value ''{value}'
286VP8=No ID
eCy8Eo=No Desc
inline=formatted message
inline.linebreak=formatted message with linebreak
",
}
`;

exports[`'TypeScript' CLI > typescript -> stdout with lokalise 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "notes": "no ID",
    "translation": "No ID"
  },
  "app.home.kittens": {
    "notes": "Counts kittens",
    "translation": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}"
  },
  "eCy8Eo": {
    "translation": "No Desc"
  },
  "escaped.apostrophe": {
    "notes": "Escaped apostrophe",
    "translation": "A quoted value ''{value}'"
  },
  "foo.bar.baz": {
    "notes": "The default message",
    "translation": "Hello World!"
  },
  "foo.bar.biff": {
    "notes": "Another message",
    "translation": "Hello Nurse!"
  },
  "inline": {
    "notes": "foo",
    "translation": "formatted message"
  },
  "inline.linebreak": {
    "notes": "foo\\n\\t\\t\\t\\t\\t\\tbar",
    "translation": "formatted message with linebreak"
  },
  "linebreak": {
    "notes": "this is\\na\\ndescription",
    "translation": "this is a message"
  },
  "newline": {
    "notes": "this is     a     description",
    "translation": "this is a message"
  },
  "templateLinebreak": {
    "notes": "this is\\n    a\\n    description",
    "translation": "this is a message"
  },
  "trailing.ws": {
    "notes": "Whitespace",
    "translation": "Some whitespace"
  }
}
",
}
`;

exports[`'TypeScript' CLI > typescript -> stdout with simple 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": "No ID",
  "app.home.kittens": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
  "eCy8Eo": "No Desc",
  "escaped.apostrophe": "A quoted value ''{value}'",
  "foo.bar.baz": "Hello World!",
  "foo.bar.biff": "Hello Nurse!",
  "inline": "formatted message",
  "inline.linebreak": "formatted message with linebreak",
  "linebreak": "this is a message",
  "newline": "this is a message",
  "templateLinebreak": "this is a message",
  "trailing.ws": "Some whitespace"
}
",
}
`;

exports[`'TypeScript' CLI > typescript -> stdout with smartling 1`] = `
{
  "stderr": "",
  "stdout": "{
  "smartling": {
    "string_format": "icu",
    "translate_paths": [
      {
        "instruction": "*/description",
        "key": "{*}/message",
        "path": "*/message"
      }
    ],
    "variants_enabled": true
  },
  "286VP8": {
    "description": "no ID",
    "message": "No ID"
  },
  "app.home.kittens": {
    "description": "Counts kittens",
    "message": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}"
  },
  "eCy8Eo": {
    "message": "No Desc"
  },
  "escaped.apostrophe": {
    "description": "Escaped apostrophe",
    "message": "A quoted value ''{value}'"
  },
  "foo.bar.baz": {
    "description": "The default message",
    "message": "Hello World!"
  },
  "foo.bar.biff": {
    "description": "Another message",
    "message": "Hello Nurse!"
  },
  "inline": {
    "description": "foo",
    "message": "formatted message"
  },
  "inline.linebreak": {
    "description": "foo\\n\\t\\t\\t\\t\\t\\tbar",
    "message": "formatted message with linebreak"
  },
  "linebreak": {
    "description": "this is\\na\\ndescription",
    "message": "this is a message"
  },
  "newline": {
    "description": "this is     a     description",
    "message": "this is a message"
  },
  "templateLinebreak": {
    "description": "this is\\n    a\\n    description",
    "message": "this is a message"
  },
  "trailing.ws": {
    "description": "Whitespace",
    "message": "Some whitespace"
  }
}
",
}
`;

exports[`'TypeScript' CLI > typescript -> stdout with transifex 1`] = `
{
  "stderr": "",
  "stdout": "{
  "286VP8": {
    "developer_comment": "no ID",
    "string": "No ID"
  },
  "app.home.kittens": {
    "developer_comment": "Counts kittens",
    "string": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}"
  },
  "eCy8Eo": {
    "string": "No Desc"
  },
  "escaped.apostrophe": {
    "developer_comment": "Escaped apostrophe",
    "string": "A quoted value ''{value}'"
  },
  "foo.bar.baz": {
    "developer_comment": "The default message",
    "string": "Hello World!"
  },
  "foo.bar.biff": {
    "developer_comment": "Another message",
    "string": "Hello Nurse!"
  },
  "inline": {
    "developer_comment": "foo",
    "string": "formatted message"
  },
  "inline.linebreak": {
    "developer_comment": "foo\\n\\t\\t\\t\\t\\t\\tbar",
    "string": "formatted message with linebreak"
  },
  "linebreak": {
    "developer_comment": "this is\\na\\ndescription",
    "string": "this is a message"
  },
  "newline": {
    "developer_comment": "this is     a     description",
    "string": "this is a message"
  },
  "templateLinebreak": {
    "developer_comment": "this is\\n    a\\n    description",
    "string": "this is a message"
  },
  "trailing.ws": {
    "developer_comment": "Whitespace",
    "string": "Some whitespace"
  }
}
",
}
`;

exports[`'TypeScript' CLI > whitespace and newlines should be preserved 1`] = `
{
  "stderr": "",
  "stdout": "",
}
`;

exports[`'TypeScript' CLI > whitespace and newlines should be preserved 2`] = `
{
  "286VP8": {
    "defaultMessage": "No ID",
    "description": "no ID",
  },
  "app.home.kittens": {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
  },
  "eCy8Eo": {
    "defaultMessage": "No Desc",
  },
  "escaped.apostrophe": {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
  },
  "foo.bar.baz": {
    "defaultMessage": "Hello World!",
    "description": "The default message",
  },
  "foo.bar.biff": {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
  },
  "inline": {
    "defaultMessage": "formatted message",
    "description": "foo",
  },
  "inline.linebreak": {
    "defaultMessage": "formatted message with linebreak",
    "description": "foo
						bar",
  },
  "linebreak": {
    "defaultMessage": "this is a message",
    "description": "this is
a
description",
  },
  "newline": {
    "defaultMessage": "this is a message",
    "description": "this is     a     description",
  },
  "templateLinebreak": {
    "defaultMessage": "this is a message",
    "description": "this is
    a
    description",
  },
  "trailing.ws": {
    "defaultMessage": "Some whitespace",
    "description": "Whitespace",
  },
}
`;
